crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__hint__plain.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
  Hint: try --force
--- stderr ---
