crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__hint__pretty.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
  ℹ try --force
--- stderr ---
