crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__hint__pretty_color.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
  <blue>ℹ</blue> <blue>try --force</blue>
--- stderr ---
